--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-first-blog",
+  "name": "hakanerunsal",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -42,5 +42,24 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "velite": "^0.1.0-beta.11"
-  }
+  },
+  "description": "My portfolio website",
+  "main": "postcss.config.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HakanErunsal/hakanerunsal.git"
+  },
+  "keywords": [
+    "website",
+    "portfolio"
+  ],
+  "author": "Hakan",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/HakanErunsal/hakanerunsal/issues"
+  },
+  "homepage": "https://github.com/HakanErunsal/hakanerunsal#readme"
 }
