--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
     "next-themes": "^0.2.1",
+    "options": "^0.0.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
