--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "github-slugger": "^2.0.0",
     "lucide": "^0.363.0",
     "lucide-react": "^0.344.0",
-    "next": "14.1.2",
+    "next": "^14.1.4",
     "next-themes": "^0.2.1",
+    "next.js": "^1.0.3",
     "options": "^0.0.6",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
