--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "lucide": "^0.363.0",
     "lucide-react": "^0.344.0",
     "next": "^14.1.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "next.js": "^1.0.3",
     "options": "^0.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-medium-image-zoom": "^5.2.4",
+    "remark": "^15.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
